<resources>
    <string name="app_name">House Sharing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_an_account_register_now">You don\'t have an account? Register now!</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>

    <string name="join_or_create_a_house">Join or create a house</string>
    <string name="type_the_id_of_the_house">Type the id of the house</string>
    <string name="join">Join!</string>
    <string name="create_house">Create house</string>
    <string name="house_name">House Name</string>
    <string name="type_the_name_of_the_house">Type the name of the house</string>
    <string name="create">Create</string>
    <string name="loading">Loading....</string>
    <string name="hello">Hello,</string>

    <string name="today">Today</string>
    <string name="notes">Notes</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bathroom</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="put_the_title_of_the_note">Put the title of the note</string>
    <string name="content">Content</string>
    <string name="you_can_write_anything_here">You can write anything here...</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">Note Title</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="m">M</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="arrow_left"><![CDATA[<]]></string>
    <string name="arrow_right"><![CDATA[>]]></string>
    <string name="this_week">This Week</string>
    <string name="weekday">WeekDay</string>
    <string name="month">Month</string>
    <string name="_1">1</string>
    <string name="there_are_not_any_pinned_notes">There are not any pinned notes!</string>
    <string name="there_are_no_pinned_notes">There are no pinned notes!</string>
    <string name="no_kitchen_appointments_today">No kitchen appointments today!</string>
    <string name="no_bathroom_appointments_today">No bathroom appointments today!</string>
    <string name="log_out">Log Out</string>
    <string name="pass_hint">********</string>
    <string name="input">Input</string>
    <string name="type_here">Type here...</string>
    <string name="insert_the_new_value">Insert the new value....</string>
    <string name="type_your_password">Type your password...</string>
    <string name="house">House</string>
    <string name="house_id">(house id)</string>
    <string name="members">Members</string>
    <string name="invite">Invite</string>
    <string name="type_the_name_or_the_id">Type the name or the id</string>
    <string name="leave">Leave</string>
    <string name="firstname_lastname">FirstName LastName</string>

</resources>